# ViperMonkey

./: pyproject.toml
vipermonkey/: api.py  export_all_excel_sheets.py  v_test.py  vbashell.py  vmonkey.py
vipermonkey/core/: expressions.py  procedures.py  python_jit.py  read_ole_fields.py  statements.py  vba_context.py  vba_conversion.py  vba_library.py
